--- a/src/Components/Weather.css
+++ b/src/Components/Weather.css
@@ -36,3 +36,40 @@
     width: 35px;
     padding: 7px;
 }
+.container1{
+
+}
+.imageContainer{
+    
+}
+#weatherImg{
+
+}
+.temperature{
+
+}
+.location{
+
+}
+.tempContainer{
+
+}
+
+.container2{
+
+}
+#smallBox{
+
+}
+#iconImg{
+
+}
+.Data{
+
+}
+#data{
+
+}
+.text1{
+
+}
